dfir_rs/tests/compile-fail/surface_demuxenum_port_extra_zero.stderr
error[E0599]: no variant named `Square` found for enum `Shape`
  --> tests/compile-fail/surface_demuxenum_port_extra_zero.rs:11:18
   |
6  |     enum Shape {
   |     ---------- variant `Square` not found here
...
11 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^ variant not found in `Shape`

error[E0277]: the trait bound `Shape: SingleVariant` is not satisfied
  --> tests/compile-fail/surface_demuxenum_port_extra_zero.rs:10:52
   |
10 |         my_demux = source_iter([]) -> demux_enum::<Shape>();
   |                                                    ^^^^^ the trait `SingleVariant` is not implemented for `Shape`
   |
   = note: requires that the enum have only one variant.
   = note: ensure there are no missing outputs; there must be exactly one output for each enum variant.

error[E0277]: the trait bound `Shape: SingleVariant` is not satisfied
  --> tests/compile-fail/surface_demuxenum_port_extra_zero.rs:10:39
   |
10 |         my_demux = source_iter([]) -> demux_enum::<Shape>();
   |                                       ^^^^^^^^^^^^^^^^^^^^^ the trait `SingleVariant` is not implemented for `Shape`
   |
   = note: requires that the enum have only one variant.
   = note: ensure there are no missing outputs; there must be exactly one output for each enum variant.

error[E0277]: the trait bound `Shape: SingleVariant` is not satisfied
  --> tests/compile-fail/surface_demuxenum_port_extra_zero.rs:10:39
   |
10 |           my_demux = source_iter([]) -> demux_enum::<Shape>();
   |  _______________________________________^
11 | |         my_demux[Square] -> for_each(std::mem::drop);
   | |____________________________________________________^ the trait `SingleVariant` is not implemented for `Shape`
   |
   = note: requires that the enum have only one variant.
   = note: ensure there are no missing outputs; there must be exactly one output for each enum variant.
